Fixed scrollbars

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,8 @@
 
   overflow: hidden;
 
+  scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
+
   text-align: center;
 
   &:before {
