--- a/src/components/Contacts/index.scss
+++ b/src/components/Contacts/index.scss
@@ -41,7 +41,10 @@
     margin: 0;
     padding-left: 0;
 
-    overflow: scroll;
+    overflow: auto;
+
+    scrollbar-width: none;
+
     list-style: none;
   }
 
